--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="hint_minute">Minutes</string>
     <string name="colon">:</string>
     <string name="timer_config_button">Start Timer</string>
+    <string name="start_button">Start</string>
+    <string name="stop_button">Stop</string>
 </resources>
