input working purpose string.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="timer_config_button">Start Timer</string>
     <string name="start_button">Start</string>
     <string name="stop_button">Stop</string>
+    <string name="purpose_text">working reason</string>
 </resources>
