--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hint_minute">Minutes</string>
     <string name="colon">:</string>
     <string name="timer_config_button">Start Timer</string>
-    <string name="save_button">Save</string>
+    <string name="finish_button">Finish</string>
     <string name="purpose_text">working reason</string>
     <string name="WorkingCategory">Working category</string>
     <string name="menu_results">Results</string>
